--- a/project/templates/main/search.html
+++ b/project/templates/main/search.html
@@ -1,5 +1,5 @@
 {% extends 'searchlayout.html' %}
-{% import 'queryMacros.html' as query %}
+{% import 'macros.html' as query %}
 {% block resultbody %}
 
    <div class="center-block skinny">
