--- a/project/templates/poner/pers.html
+++ b/project/templates/poner/pers.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 {% from "includes/_formhelpers.html" import render_field %}
-{% from "queryMacros.html" import nom, lugar, fecha, render_profile %}
+{% from "macros.html" import nom, fecha, render_profile %}
 
 <div>
     <br>
