--- a/project/templates/user/info.html
+++ b/project/templates/user/info.html
@@ -111,7 +111,7 @@ base de datos. <br> Sólo tiene como propósito comunicarnos con usted en caso d
             </div>
              <div class="row">
                 <input data-inline="true" type="submit" class="btn btn-primary" value="Enviar">
-                <a data-inline="true" role="button" class="btn btn-info" href="{{ url_for('user.profile') }}">Omitir</a>
+                <a data-inline="true" role="button" class="btn btn-info" href="{{ url_for('user.perfil') }}">Omitir</a>
             </div>
         </div>
       </form>
