--- a/project/templates/user/register.html
+++ b/project/templates/user/register.html
@@ -25,7 +25,7 @@
               {{render_field(form.email, class ="form-control")}}
             </div>
             <div class="form-group">
-              {{render_field(form.nom_usario, class ="form-control")}}
+              {{render_field(form.nom_usuario, class ="form-control")}}
             </div>
             <div class="form-group">
               {{render_field(form.contrasena, class ="form-control")}}
