--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -30,6 +30,7 @@
         <meta http-equiv="pragma" content="no-cache" />
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
         <link href="{{ url_for('static', filename='css/stylesheet.css') }}" id="member_stylesheet" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/global.css') }}" id="" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/searchbar.css') }}" id="" rel="stylesheet" type="text/css" />
@@ -97,9 +98,11 @@
         <!-- scripts -->
         <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
         <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src ="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
         <script src="{{ url_for('static', filename='js/form-toggle.js') }}"></script>
         <script src="{{ url_for('static', filename='js/tab-url.js') }}"></script>
         <script src="{{ url_for('static', filename='js/dynamic-forms.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/data-tables.js') }}"></script>
         {% block js %}{% endblock %}
     </body>
 </html>
