--- a/project/templates/poner/pista.html
+++ b/project/templates/poner/pista.html
@@ -106,6 +106,23 @@
             <div class="form-group">
               {{render_field(form.coment_pista_son, class ="form-control")}}
             </div>
+            <hr>
+            <div class="row">
+                <h3>Cobertura</h3>
+                <div class="form-group col-md-4">
+                    {{render_field(form.pais_cob, class ="form-control" )}}
+                </div>
+                <div class="form-group col-md-4">
+                    {{render_field(form.fecha_comienzo_cob, class ="form-control" )}}
+                </div>
+                <div class="form-group col-md-4">
+                    {{render_field(form.fecha_finale_cob, class ="form-control" )}}
+                </div>
+            </div>
+            <div class="form-group">
+                {{render_field(form.cobertura, class ="form-control" )}}
+            </div>
+
             <br>
              <div>
                 <button class="btn btn-success" type="submit">Enviar</button>
