Added admin profile.

--- a/project/templates/includes/_footer.html
+++ b/project/templates/includes/_footer.html
@@ -29,17 +29,14 @@
         <a href="http://poeticasonora.mx/Team" rel="history">Credits 2016</a> |
         <a href="http://poeticasonora.mx/Equipo-RDA" rel="history">Credits 2017</a> |
         <a href="http://poeticasonora.mx/Contact" rel="history">Contact</a><br><br><b>
-        <a href="http://www.twitter.com/_lleom_" class="icon-link" target="_blank"></a>
-        <a href="https://www.facebook.com/laboratorioextendido" class="icon-link" target="_blank"></a></b><br>#PoéticaSonoraMX
-      </small></div>
+        <a href="http://www.twitter.com/_lleom_" class="icon-link" target="_blank"><i class="fa fa-facebook no-underline"></i></a>
+        <a href="https://www.facebook.com/laboratorioextendido" class="icon-link" target="_blank"><i class="fa fa-twitter no-underline" aria-hidden="true"></i>
+        </a></b><br>#PoéticaSonoraMX</small></div>
           <br>
           <br>
           <br>
       <div>
-          <a href="https://lleom.net/" class="image-link" target="_blank">
-              <img src="//payload.persona.co/1/0/28105/145850/lleom_logo_negro_403.jpeg" width="403" height="156"
-                   width_o="403" height_o="156" src_o="//payload.persona.co/1/0/28105/145850/lleom_logo_negro_403.jpeg"
-               data-mid="310542" border="0"data-scale="50"/></a>
+
           <br>
           <br>
       </div>
