--- a/project/templates/user/mod.html
+++ b/project/templates/user/mod.html
@@ -23,10 +23,11 @@
 
         {% include 'includes/_profile.html' %}
 
+        <div class=""
+
     </div>
 
 </div>
 
-    {% include 'includes/_footer.html' %}
 
 {% endblock %}
