--- a/project/templates/includes/_formhelpers.html
+++ b/project/templates/includes/_formhelpers.html
@@ -10,3 +10,112 @@
   {% endif %}
     </dd>
 {% endmacro %}
+
+{% macro cob(form) -%}
+    <div class="row">
+        <h3>Cobertura</h3>
+        <div class="form-group col-md-4">
+            {{render_field(form.pais_cob, class ="form-control" )}}
+        </div>
+        <div class="form-group col-md-4">
+            {{render_field(form.fecha_comienzo_cob, class ="form-control"
+                                                ,placeholder='dd/mm/aaaa') }}
+        </div>
+        <div class="form-group col-md-4">
+            {{render_field(form.fecha_finale_cob, class ="form-control"
+                                            ,placeholder='dd/mm/aaaa') }}
+        </div>
+    </div>
+    <div class="form-group">
+        {{render_field(form.cobertura, class ="form-control" )}}
+    </div>
+{% endmacro %}
+
+{% macro origen(form, title) -%}
+    <div class="row">
+        <h3>{{ title|safe }}</h3>
+        <div class="form-group col-md-4">
+          {{render_field(form.ciudad, class ="form-control")}}
+        </div>
+        <div class="form-group col-md-4">
+          {{render_field(form.subdivision, class ="form-control")}}
+        </div>
+        <div class="form-group col-md-4">
+          {{render_field(form.pais, class ="form-control")}}
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro nom_pers(form, hide=False) -%}
+    {% if hide %}
+        <div class="row individual">
+    {% else %}
+        <div class="row">
+    {% endif %}
+        <div class="form-group col-md-3">
+          {{render_field(form.nom_part, class ="form-control")}}
+        </div>
+        <div class="form-group col-md-3">
+          {{render_field(form.nom_paterno, class ="form-control")}}
+        </div>
+        <div class="form-group col-md-3">
+          {{render_field(form.nom_materno, class ="form-control")}}
+        </div>
+        <div class="form-group col-md-3">
+          {{render_field(form.seudonimo, class ="form-control")}}
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro fecha(form) -%}
+    <div class="row">
+        <div class="form-group col-sm-6">
+        {{render_field(form.fecha_comienzo, class ="form-control"
+                                       , placeholder="dd/mm/aaaa")}}
+        </div>
+        <div class="form-group col-sm-6">
+        {{render_field(form.fecha_finale, class ="form-control"
+                                    , placeholder="dd/mm/aaaa")}}
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro dyn_grupo(form, hide=False) -%}
+    <div class="dyn-form-container">
+    {% for org_form in form.org_form %}
+        {% if hide %}
+        <div class="row individual">
+        {% else %}
+        <div class="row">
+        {% endif %}
+            <div data-role="dynamic-fields">
+                <div class="form-custom">
+                    <div class="form-group col-md-3">
+                      {{render_field(org_form.grupo_id, class ="form-control" )}}
+                    </div>
+                    <div class="form-group col-md-3">
+                      {{render_field(org_form.titulo, class ="form-control")}}
+                    </div>
+                    <div class="form-group col-md-2">
+                      {{render_field(org_form.fecha_comienzo, class ="form-control"
+                                                         , placeholder="dd/mm/aaaa")}}
+                    </div>
+                    <div class="form-group col-md-2">
+                      {{render_field(org_form.fecha_finale, class ="form-control"
+                                                        , placeholder="dd/mm/aaaa")}}
+                    </div>
+                    <div class="dyn-buttons col-md-2 text-center">
+                        <button class="pull-down btn btn-default" data-role="remove">
+                            <div class="glyphicon glyphicon-remove"></div>
+                        </button>
+                        <button class="pull-down btn btn-basic" data-role="add">
+                            <div class="glyphicon glyphicon-plus"></div>
+                        </button>
+                    </div>
+                </div>  <!-- /div.form-inline -->
+            </div>  <!-- /div[data-role="dynamic-fields"] -->
+        </div>  <!-- /div.row -->
+        {% endfor %}
+    </div>
+{% endmacro %}
+
