--- a/project/templates/poner/part.html
+++ b/project/templates/poner/part.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-{% from "includes/_formhelpers.html" import render_field %}
-{% from "macros.html" import nom, render_profile %}
+{% from "includes/_formhelpers.html" import render_field, nom_pers, origen, dyn_grupo, fecha %}
+{% from "macros.html" import render_profile %}
 
 <div>
     <br>
@@ -27,23 +27,10 @@
                     </ul>
                 {% endif %}
             </div>
-            <div class="row individual">
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_part, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_paterno, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_materno, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.seudonimo, class ="form-control")}}
-                </div>
-            </div>
+            {{ nom_pers(form, True) }}
             <div class="organization">
                 <div class="form-group">
-                  {{render_field(form.nom_part_ag, class ="form-control")}}
+                  {{render_field(form.nom_part_gr, class ="form-control")}}
                 </div>
             </div>
             <div class="form-group">
@@ -64,28 +51,8 @@
             <div class="form-group individual">
                 {{render_field(form.genero, class ="form-control")}}
             </div>
-            <div class="row">
-                <div class="form-group col-sm-6">
-                {{render_field(form.fecha_comienzo, class ="form-control"
-                                               , placeholder="dd/mm/aaaa")}}
-                </div>
-                <div class="form-group col-sm-6">
-                {{render_field(form.fecha_finale, class ="form-control"
-                                            , placeholder="dd/mm/aaaa")}}
-                </div>
-            </div>
-            <div class="row">
-                <h3>Origen</h3>
-                <div class="form-group col-md-4">
-                  {{render_field(form.ciudad, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-4">
-                  {{render_field(form.subdivision, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-4">
-                  {{render_field(form.pais, class ="form-control")}}
-                </div>
-            </div>
+            {{ fecha(form) }}
+            {{ origen(form, 'Origen') }}
             <div class="row individual">
                 <h3>Muer</h3>
                 <div class="form-group col-md-4">
@@ -98,41 +65,10 @@
                   {{render_field(form.pais_muer, class ="form-control")}}
                 </div>
             </div>
-            <div class="dyn-form-container">
-                {% for sub_form in form.org_form %}
-                <div class="row individual">
-                    <div data-role="dynamic-fields">
-                        <div class="form-custom">
-                            <div class="form-group col-md-3">
-                              {{render_field(sub_form.agregar_id, class ="form-control" )}}
-                            </div>
-                            <div class="form-group col-md-3">
-                              {{render_field(sub_form.titulo, class ="form-control")}}
-                            </div>
-                            <div class="form-group col-md-2">
-                              {{render_field(sub_form.fecha_comienzo, class ="form-control"
-                                                                 , placeholder="dd/mm/aaaa")}}
-                            </div>
-                            <div class="form-group col-md-2">
-                              {{render_field(sub_form.fecha_finale, class ="form-control"
-                                                                , placeholder="dd/mm/aaaa")}}
-                            </div>
-                            <div class="dyn-buttons col-md-2 text-center">
-                                <button class="pull-down btn btn-default" data-role="remove">
-                                    <div class="glyphicon glyphicon-remove"></div>
-                                </button>
-                                <button class="pull-down btn btn-basic" data-role="add">
-                                    <div class="glyphicon glyphicon-plus"></div>
-                                </button>
-                            </div>
-                        </div>  <!-- /div.form-inline -->
-                    </div>  <!-- /div[data-role="dynamic-fields"] -->
-                </div>  <!-- /div.row -->
-                {% endfor %}
-            </div>
+            {{ dyn_grupo(form, True) }}
             <div class="organization">
                 <div class="form-group">
-                  {{render_field(form.tipo_agregar, class ="form-control")}}
+                  {{render_field(form.tipo_grupo, class ="form-control")}}
                 </div>
             </div>
             <div class="form-group">
