--- a/project/templates/user/info.html
+++ b/project/templates/user/info.html
@@ -1,10 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block body %}
+
+    {% from "includes/_formhelpers.html" import render_field, nom_pers, origen, dyn_grupo %}
   <h1>Información Opcional</h1>
     <br>
     <br>
-  {% from "includes/_formhelpers.html" import render_field %}
     <div id="toggle-div" style="display: none;" name="{{ session['is_person']|safe }}"></div>
     <form id="info-form" method='POST' action="">
 
@@ -18,23 +19,10 @@ base de datos. <br> Sólo tiene como propósito comunicarnos con usted en caso d
             </p>
         </div>
             <br>
-            <div class="row individual">
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_part, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_paterno, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_materno, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.seudonimo, class ="form-control")}}
-                </div>
-            </div>
+            {{ nom_pers(form, True) }}
             <div class="organization">
                 <div class="form-group">
-                  {{render_field(form.nom_part_ag, class ="form-control")}}
+                  {{render_field(form.nom_part_gr, class ="form-control")}}
                 </div>
             </div>
             <div class="row">
@@ -57,59 +45,17 @@ base de datos. <br> Sólo tiene como propósito comunicarnos con usted en caso d
             <div class="form-group individual">
                 {{render_field(form.genero, class ="form-control")}}
             </div>
-            <div class="row">
-                <div class="form-group col-md-4">
-                  {{render_field(form.ciudad, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-4">
-                  {{render_field(form.subdivision, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-4">
-                  {{render_field(form.pais, class ="form-control")}}
-                </div>
-            </div>
-            <div class="dyn-form-container">
-            {% for org_form in form.org_form %}
-                <div class="row individual">
-                    <div data-role="dynamic-fields">
-                        <div class="form-custom">
-                            <div class="form-group col-md-3">
-                              {{render_field(org_form.agregar_id, class ="form-control" )}}
-                            </div>
-                            <div class="form-group col-md-3">
-                              {{render_field(org_form.titulo, class ="form-control")}}
-                            </div>
-                            <div class="form-group col-md-2">
-                              {{render_field(org_form.fecha_comienzo, class ="form-control"
-                                                                 , placeholder="dd/mm/aaaa")}}
-                            </div>
-                            <div class="form-group col-md-2">
-                              {{render_field(org_form.fecha_finale, class ="form-control"
-                                                                , placeholder="dd/mm/aaaa")}}
-                            </div>
-                            <div class="dyn-buttons col-md-2 text-center">
-                                <button class="pull-down btn btn-default" data-role="remove">
-                                    <div class="glyphicon glyphicon-remove"></div>
-                                </button>
-                                <button class="pull-down btn btn-basic" data-role="add">
-                                    <div class="glyphicon glyphicon-plus"></div>
-                                </button>
-                            </div>
-                        </div>  <!-- /div.form-inline -->
-                    </div>  <!-- /div[data-role="dynamic-fields"] -->
-                </div>  <!-- /div.row -->
-                {% endfor %}
-            </div>
-
+            {{ origen(form, 'Origen') }}
+            {{ dyn_grupo(form, True) }}
             <div class="organization">
                 <div class="form-group">
-                  {{render_field(form.tipo_agregar, class ="form-control")}}
+                  {{render_field(form.tipo_grupo, class ="form-control")}}
                 </div>
             </div>
             <div class="form-group">
               {{render_field(form.coment_part, class ="form-control")}}
             </div>
-             <div class="row">
+             <div>
                 <input data-inline="true" type="submit" class="btn btn-primary" value="Enviar">
                 <a data-inline="true" role="button" class="btn btn-info" href="{{ url_for('user.perfil') }}">Omitir</a>
             </div>
